docs: Workflows for findings (#998)
* Setup: Workflows for findings

* Renaming Setting up model workflows page

* Fixing links

* Sidebar link

* Renaming directory

* Fixing broken links pt2

* Cleaning up...

* More cleanup

* More

* More renaming

* Oops

* Almost there

* Stragglers

* One more?

* & includes

* Save point

* Edit: Add new workflows in docs

* Edit: Edit existing workflows in docs

* Edit: Review active workflows in docs

* Edit: Review workflow histories in docs

* Save point

* Edit: Initiate workflows in docs

* Edit: Abort workflows in docs

* Edit: Manage workflow tasks

* Edit: Transition workflows

* More cleaup

* Training: Edit Add new workflows

* Training: Review active workflows

* Training: Review workflow history

* Training: Initiate workflows

* Training: Reset workflows

* Training: Abort workflows

* Training: Transition workflows

* Proofreading

* More proofreading

* ooo figured out a neat conditional hack

* Editing training slides

* Updating single-source templates

--- a/internal/templates/single-source/_metadata-level-conditional.qmd
+++ b/internal/templates/single-source/_metadata-level-conditional.qmd
@@ -1,14 +1,33 @@
+<!-- REPLACE WITH YOUR ACTUAL INSTRUCTIONS / LOGIC -->
+
+
+<!-- VISIBLE IN USER GUIDES ONlY ON ALL USER GUIDE PAGES THE INCLUDES IS PLACED ON -->
+
 :::: {.content-visible unless-format="revealjs"}
 When you're ready, verify your workflow's status, and then submit your model documentation or validation report for approval.
 
 ::::
 
 
+<!-- VISIBLE IN TRAINING SLIDES ONLY -->
+
+
+<!-- VISIBLE ONLY ON PAGES THAT HAVE A CUSTOM METADATA TAG:
+
+```includes:
+    developer: true
+``` -->
+
 :::: {.content-visible when-format="revealjs" when-meta="includes.developer"}
 When you're ready, verify your workflow's status, and then submit your model documentation for approval.
 
 ::::
 
+<!-- VISIBLE ONLY ON PAGES THAT **DO NOT** HAVE A CUSTOM METADATA TAG:
+
+```includes:
+    developer: true
+``` -->
 
 :::: {.content-visible when-format="revealjs" unless-meta="includes.developer"}
 When you're ready, verify your workflow's status, and then submit your validation report for approval.
