--- a/site/about/overview.qmd
+++ b/site/about/overview.qmd
@@ -148,4 +148,4 @@ Our [quickstarts](/get-started/get-started.qmd) are the quickest and easiest way
 
 [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^2]: [Working with model workflows](/guide/model-workflows/working-with-model-workflows.qmd)
+[^2]: [Working with workflows](/guide/workflows/working-with-workflows.qmd)
