--- a/site/guide/model-documentation/submit-for-approval.qmd
+++ b/site/guide/model-documentation/submit-for-approval.qmd
@@ -20,20 +20,20 @@ aliases:
 
 ## Verify workflows
 
-{{< include /guide/model-workflows/_review-active-workflows.qmd >}}
+{{< include /guide/workflows/_review-active-workflows.qmd >}}
 
 ## Advance workflows
 
-{{< include /guide/model-workflows/_transition-model-workflows.qmd >}}
+{{< include /guide/workflows/_transition-workflows.qmd >}}
 
-{{< include /guide/model-workflows/_transition-workflow-examples.qmd >}}
+{{< include /guide/workflows/_transition-workflow-examples.qmd >}}
 
 
 <!-- FOOTNOTES -->
 
 [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^2]: [Configure model workflows](/guide/model-workflows/configure-model-workflows.qmd)
+[^2]: [Configure workflows](/guide/workflows/configure-workflows.qmd)
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
