--- a/site/guide/model-inventory/archive-delete-models.qmd
+++ b/site/guide/model-inventory/archive-delete-models.qmd
@@ -94,11 +94,11 @@ If a model was created in error, or you otherwise no longer require a model to b
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^4]: [Manage model stages](/guide/model-workflows/manage-model-stages.qmd)
+[^4]: [Manage model stages](/guide/workflows/manage-model-stages.qmd)
 
-[^5]: [Setting up model workflows](/guide/model-workflows/setting-up-model-workflows.qmd)
+[^5]: [Setting up workflows](/guide/workflows/setting-up-workflows.qmd)
 
-[^6]: [Working with model workflows](/guide/model-workflows/working-with-model-workflows.qmd)
+[^6]: [Working with workflows](/guide/workflows/working-with-workflows.qmd)
 
 [^7]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
