--- a/site/guide/model-inventory/manage-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/manage-model-inventory-fields.qmd
@@ -141,11 +141,11 @@ To group model inventory fields, first create an inventory field group:
     Click, hold, and drag to the right to reveal additional columns.
     :::
 
-[^4]: [Working with model workflows](/guide/model-workflows/working-with-model-workflows.qmd)
+[^4]: [Working with workflows](/guide/workflows/working-with-workflows.qmd)
 
 [^5]: [Inventory field types](#inventory-field-types)
 
-[^6]: [Configure model workflows](/guide/model-workflows/configure-model-workflows.qmd)
+[^6]: [Configure workflows](/guide/workflows/configure-workflows.qmd)
 
 [^7]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
 
