--- a/site/guide/workflows/_workflow-step-types.qmd
+++ b/site/guide/workflows/_workflow-step-types.qmd
@@ -6,16 +6,16 @@
 #### {{< fa cube >}} Model Stage Change
 
 - Transitions a model into another stage.
-- Requires available model stages associated with the workflow.^[[Manage model stages](/guide/model-workflows/manage-model-stages.qmd)]
+- Requires available model stages associated with the workflow.^[[Manage model stages](/guide/workflows/manage-model-stages.qmd)]
 
 | Field | Description |
 |---:|---|
-| [when these conditions are met]{.smallcaps} (optional) | Add conditional requirements to qualify for this step.^[ [Conditional requirements](/guide/model-workflows/setting-up-model-workflows.qmd#conditional-requirements)]  |
+| [when these conditions are met]{.smallcaps} (optional) | Add conditional requirements to qualify for this step.^[ [Conditional requirements](/guide/workflows/setting-up-workflows.qmd#conditional-requirements)]  |
 | [set model stage to]{.smallcaps} | Select the model stage to transition to. |
 : **{{< fa cube >}} Model Stage Change** step configuration {.hover tbl-colwidths="[40,60]"}
 
 #### {{< fa wifi >}} Workflow State Change
-Transitions the workflow into another workflow state.^[[Workflow states](/guide/model-workflows/setting-up-model-workflows.qmd#workflow-states)]
+Transitions the workflow into another workflow state.^[[Workflow states](/guide/workflows/setting-up-workflows.qmd#workflow-states)]
 
 | Field | Description |
 |---:|---|
@@ -31,7 +31,7 @@ Creates a button that performs an action on behalf of the user.
 
 | Field | Description |
 |---:|---|
-| [display action button when]{.smallcaps}  (optional) | Add conditional requirements for displaying this step.^[[Conditional requirements](/guide/model-workflows/setting-up-model-workflows.qmd#conditional-requirements)]  |
+| [display action button when]{.smallcaps}  (optional) | Add conditional requirements for displaying this step.^[[Conditional requirements](/guide/workflows/setting-up-workflows.qmd#conditional-requirements)]  |
 | [action button label]{.smallcaps} | Text that displays on your action button. |
 | [request fields]{.smallcaps} (optional) | Include required inventory fields alongside your action.[^step-types-1]  |
 | [optional fields]{.smallcaps} (optional) | Include optional inventory fields alongside your action.[^step-types-1]  |
@@ -41,7 +41,7 @@ Creates a button that performs an action on behalf of the user.
 
 Display a preconfigured message to users in the selected **[approval group]{.smallcaps}**.
 
-- Select from either **User Roles**, **Model Stakeholder Types**,or either **User Role** or **User Type** inventory field.^[[Conditional requirements](/guide/model-workflows/setting-up-model-workflows.qmd#conditional-requirements)]
+- Select from either **User Roles**, **Model Stakeholder Types**,or either **User Role** or **User Type** inventory field.^[[Conditional requirements](/guide/workflows/setting-up-workflows.qmd#conditional-requirements)]
 - Must be connected to both a rejection and approval {{< fa cube >}} Model Stage Change step.[^step-types-2]
 
 | Field | Description |
@@ -55,7 +55,7 @@ Display a preconfigured message to users in the selected **[approval group]{.sma
 
 Send email notifications to users in selected groups.
 
-Select from either **User Roles** or **Model Stakeholder Types**.^[[Conditional requirements](/guide/model-workflows/setting-up-model-workflows.qmd#conditional-requirements)]
+Select from either **User Roles** or **Model Stakeholder Types**.^[[Conditional requirements](/guide/workflows/setting-up-workflows.qmd#conditional-requirements)]
 
 | Field | Description |
 |---:|---|
@@ -78,17 +78,17 @@ Workflows cannot be saved until condition branches are connected to other steps.
 To configure a condition branch:
 
 1. On the Configure Condition Branch modal, click **{{< fa plus >}} Add Branch**.
-2. Enter in the **[path name]{.smallcaps}** and designate the **[conditions]{.smallcaps}**^[[Conditional requirements](/guide/model-workflows/setting-up-model-workflows.qmd#conditional-requirements)] that apply to this path.
+2. Enter in the **[path name]{.smallcaps}** and designate the **[conditions]{.smallcaps}**^[[Conditional requirements](/guide/workflows/setting-up-workflows.qmd#conditional-requirements)] that apply to this path.
 3. Continue with steps 1 and 2 until your conditional branch logic is complete.
 
     To remove a path, click **{{< fa ellipsis-vertical >}}** and select **{{< fa trash-can >}} Remove Path**.
 4. When you are finished setting up all your branch paths, click **Update Step** to save your step.
 
-    Proceed with linking the Condition Branch with your subsequent steps.^[[Link workflow together](/guide/model-workflows/configure-model-workflows.qmd#link-workflow-together)]
+    Proceed with linking the Condition Branch with your subsequent steps.^[[Link workflow together](/guide/workflows/configure-workflows.qmd#link-workflow-together)]
 
 #### {{< fa clock >}} Wait
 
-- Creates a time condition for displaying next available action.^[[Conditional requirements](/guide/model-workflows/setting-up-model-workflows.qmd#conditional-requirements)]
+- Creates a time condition for displaying next available action.^[[Conditional requirements](/guide/workflows/setting-up-workflows.qmd#conditional-requirements)]
 - Used to enforce a time delay or a calendar date milestone.
 
 ::: {.callout title="Time stamp configuration is in the current user's timezone."}
@@ -115,7 +115,7 @@ Triggers another workflow indicated by **[select workflow to run]{.smallcaps}**,
 #### {{< fa circle-stop >}} End
 
 - Designates the end of your workflow.
-- Use this step when all of your other steps have been configured and linked together.^[[Link workflow together](/guide/model-workflows/configure-model-workflows.qmd#link-workflow-together)]
+- Use this step when all of your other steps have been configured and linked together.^[[Link workflow together](/guide/workflows/configure-workflows.qmd#link-workflow-together)]
 :::
 
 
@@ -129,7 +129,7 @@ Triggers another workflow indicated by **[select workflow to run]{.smallcaps}**,
     Users must have write permissions for the field in order to enter values.
 
 
-[^step-types-2]: **[Configure model workflows](/guide/model-workflows/configure-model-workflows.qmd#create-custom-workflows):**<br><br>
+[^step-types-2]: **[Configure workflows](/guide/workflows/configure-workflows.qmd#create-custom-workflows):**<br><br>
 
     1. Configure two **{{< fa cube >}} Model Stage Change** steps for your associated rejection and approval stages.
     2. Then, from the bottom of your **{{< fa users >}} Approval** step:
