--- a/site/guide/workflows/manage-model-stages.qmd
+++ b/site/guide/workflows/manage-model-stages.qmd
@@ -7,7 +7,7 @@ aliases:
   - customize-model-lifecycle-statuses.html
 ---
 
-{{< include /guide/model-workflows/_configure-model-stages.qmd >}}
+{{< include /guide/workflows/_configure-model-stages.qmd >}}
 
 ::: {.attn}
 
@@ -20,7 +20,7 @@ aliases:
 
 ## Add model stages
 
-{{< include /guide/model-workflows/_add-model-stages.qmd >}}
+{{< include /guide/workflows/_add-model-stages.qmd >}}
 
 ## Edit or delete stages
 
@@ -42,7 +42,7 @@ Make sure that the stage you're deleting is not associated with any workflows or
 ## What's next
 
 - [Workflows FAQ](/faq/faq-workflows.qmd)
-- [Configure model workflows](configure-model-workflows.qmd)
+- [Configure workflows](configure-workflows.qmd)
 
 
 <!-- FOOTNOTES -->
