--- a/site/guide/workflows/manage-workflows.qmd
+++ b/site/guide/workflows/manage-workflows.qmd
@@ -1,6 +1,8 @@
 ---
-title: "Manage model workflows"
+title: "Manage workflows"
 date: last-modified
+aliases:
+  - /guide/model-workflows/manage-model-workflows.html
 ---
 
 Review workflows associated with your models, and initiate or abort workflows configured for your organization on your models.
@@ -16,7 +18,7 @@ Review workflows associated with your models, and initiate or abort workflows co
 
 :::
 
-## Review model workflows
+## Review workflows
 
 ### Review active workflows
 
@@ -24,21 +26,21 @@ Review workflows associated with your models, and initiate or abort workflows co
 
 ### Review workflow histories
 
-{{< include /guide/model-workflows/_review-workflow-history.qmd >}}
+{{< include /guide/workflows/_review-workflow-history.qmd >}}
 
-## Initiate model workflows
+## Initiate workflows
 
-{{< include /guide/model-workflows/_initiate-model-workflows.qmd >}}
+{{< include /guide/workflows/_initiate-workflows.qmd >}}
 
 ## Abort workflows
 
-{{< include /guide/model-workflows/_abort-workflows.qmd >}}
+{{< include /guide/workflows/_abort-workflows.qmd >}}
 
 
 <!-- FOOTNOTES -->
 
 [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^2]: [Configure custom workflows](configure-model-workflows.qmd)
+[^2]: [Configure workflows](configure-workflows.qmd)
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
