--- a/site/guide/workflows/setting-up-workflows.qmd
+++ b/site/guide/workflows/setting-up-workflows.qmd
@@ -1,23 +1,25 @@
 ---
-title: "Setting up model workflows"
+title: "Setting up workflows"
 date: last-modified
 listing:
-  - id: model-workflows
+  - id: workflow-setup
     type: grid
     max-description-length: 250
     sort: false
     fields: [title, description]
     contents:
     - manage-model-stages.qmd
-    - configure-model-workflows.qmd
+    - configure-workflows.qmd
     - workflow-configuration-examples.qmd
+aliases: 
+  - /guide/model-workflows/setting-up-model-workflows.html
 ---
 
-{{< include /guide/model-workflows/_set-up-model-workflows.qmd >}}
+{{< include /guide/workflows/_set-up-workflows.qmd >}}
 
 ## Workflow setup
 
-:::{#model-workflows}
+:::{#workflow-setup}
 :::
 
 ## Workflow elements
@@ -34,16 +36,16 @@ A workflow is comprised of an interplay of these elements:
 For more assistance configuring workflow step types, refer to our [Workflow configuration examples](workflow-configuration-examples.qmd#workflow-step-type-examples).
 :::
 
-{{< include /guide/model-workflows/_workflow-step-types.qmd >}}
+{{< include /guide/workflows/_workflow-step-types.qmd >}}
 
 ### Conditional requirements
 
-{{< include /guide/model-workflows/_conditional-requirements.qmd >}}
+{{< include /guide/workflows/_conditional-requirements.qmd >}}
 
 ### Workflow states
 
-{{< include /guide/model-workflows/_workflow-states.qmd >}}
+{{< include /guide/workflows/_workflow-states.qmd >}}
 
 ## What's next
 
-- [Working with model workflows](working-with-model-workflows.qmd)
+- [Working with workflows](working-with-workflows.qmd)
