--- a/site/releases/2024/2024-may-22/release-notes.qmd
+++ b/site/releases/2024/2024-may-22/release-notes.qmd
@@ -679,7 +679,7 @@ Our revamped workflows configuration enables more granular management of model a
 :::
 
 ::: {.w-30-ns .tc}
-[Configure model workflows](/guide/model-workflows/configure-model-workflows.qmd){.button}
+[Configure workflows](/guide/workflows/configure-workflows.qmd){.button}
 
 :::
 
