--- a/site/releases/2025/2025-apr-24/release-notes.qmd
+++ b/site/releases/2025/2025-apr-24/release-notes.qmd
@@ -277,7 +277,7 @@ These changes offer enhanced flexibility in deploying the documentation site acr
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^4]: [Setting up model workflows](/guide/model-workflows/setting-up-model-workflows.qmd#conditional-requirements)
+[^4]: [Setting up workflows](/guide/workflows/setting-up-workflows.qmd#conditional-requirements)
 
 [^5]: [Work with test results](/guide/model-documentation/work-with-test-results.qmd)
 
