--- a/site/training/administrator-fundamentals/organizational-oversight-reporting.qmd
+++ b/site/training/administrator-fundamentals/organizational-oversight-reporting.qmd
@@ -44,7 +44,7 @@ This final module is part of a four-part series:
 
 ::: {.f2}
 1. [Audit model activity](#audit-model-activity)
-2. [Audit model workflows](#audit-model-workflows)
+2. [Audit workflows](#audit-workflows)
 3. [Work with analytics](#work-with-analytics)
 
 :::
@@ -100,20 +100,20 @@ Already logged in and refreshed this module? Click [{{< fa chevron-right >}}]() 
 
 {{< include /training/common-slides/_review-model-activity.qmd >}}
 
-# Audit model workflows {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Audit workflows {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {.scrollable}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Review model workflows
+Review workflows
 
 ::: {.f5 .nt2 .pl2 .mb4}
 (Scroll down for the full instructions.)
 :::
 
 ::: {.tc}
-[Learn more ...](/guide/model-workflows/manage-model-workflows.qmd){.button target="_blank"}
+[Learn more ...](/guide/workflows/manage-workflows.qmd){.button target="_blank"}
 :::
 
 <br>Try it **live** on the next page. {{< fa hand-point-right >}}
@@ -122,16 +122,16 @@ Review model workflows
 
 ::: {.column width="70%" .bl .pl4 .f4}
 
-Review workflows associated with your models:
+Review workflows associated with your models or findings:
 
 ::: {.panel-tabset}
 ### Review active workflows
 
-{{< include /guide/model-workflows/_review-active-workflows.qmd >}}
+{{< include /guide/workflows/_review-active-workflows.qmd >}}
 
 ### Review workflow history
 
-{{< include /guide/model-workflows/_review-workflow-history.qmd >}}
+{{< include /guide/workflows/_review-workflow-history.qmd >}}
 
 :::
 
@@ -142,7 +142,7 @@ Review workflows associated with your models:
 
 :::: {.slideover--b .auto-collapse-10}
 ::: {.tc}
-**View model workflows**
+**View model workflow**
 :::
 
 1. Select the name of your model you registered for this course to open up the model details page.
