--- a/site/about/contributing/style-guide/conventions.qmd
+++ b/site/about/contributing/style-guide/conventions.qmd
@@ -115,7 +115,7 @@ Column 2, 50% wide
 
 | Correct | Incorrect | 
 |------|-----|
-|   `[Configure model workflows](/guide/model-workflows/configure-model-workflows.qmd)`  |  `[Learn more ...](/../../configure-custom-workflows.html)`  |
+|   `[Configure workflows](/guide/workflows/configure-workflows.qmd)`  |  `[Learn more ...](/../../configure-workflows.html)`  |
 : **Inline link** examples {.hover}
 
 #### Buttons
@@ -129,10 +129,10 @@ Change any Markdown link into a our theme-styled button by appending `{.button}`
 ::: {.w-30-ns}
 **Correct:**  
 
-[Configure model workflows](/guide/model-workflows/configure-model-workflows.qmd){.button}
+[Configure workflows](/guide/workflows/configure-workflows.qmd){.button}
 
 ```markdown
-[Configure model workflows](/guide/model-workflows/configure-model-workflows.qmd){.button}
+[Configure workflows](/guide/workflows/configure-workflows.qmd){.button}
 ```
 
 ::: {.callout}
@@ -144,13 +144,13 @@ Using a markdown button also enables you to link to to the `.qmd` path instead o
 ::: {.w-60-ns}
 **Incorrect:**
 
-<form method="get" action="../../../guide/model-workflows/configure-custom-workflows.html">
-   <button type="submit" style="color: #de257e; background-color: white; border-radius: 8px; border: none; font-size: 16px; padding: 6.25px 12.5px; margin-left: 16px; margin-bottom: 20px;border: 1px solid #de257e">Set up model workflows</button>
+<form method="get" action="../../../guide/workflows/configure-workflows.html">
+   <button type="submit" style="color: #de257e; background-color: white; border-radius: 8px; border: none; font-size: 16px; padding: 6.25px 12.5px; margin-left: 16px; margin-bottom: 20px;border: 1px solid #de257e">Configure workflows</button>
 </form>
 
 ```html
-<form method="get" action="../../../guide/model-workflows/configure-custom-workflows.html">
-   <button type="submit" style="color: white; background-color: #de257e; border-radius: 8px; border: none; font-size: 16px; padding: 6.25px 12.5px; margin-left: 16px; margin-bottom: 20px;">Set up model workflows</button>
+<form method="get" action="../../../guide/workflows/configure-workflows.html">
+   <button type="submit" style="color: white; background-color: #de257e; border-radius: 8px; border: none; font-size: 16px; padding: 6.25px 12.5px; margin-left: 16px; margin-bottom: 20px;">Configure workflows</button>
 </form>
 ```
 :::
@@ -174,7 +174,7 @@ Using a markdown button also enables you to link to to the `.qmd` path instead o
 
     [^2]: [Manage model stages](manage-model-stages.qmd)
 
-    [^3]: [Configure model workflows](configure-model-workflows.qmd)
+    [^3]: [Configure workflows](configure-workflows.qmd)
 
     [^5]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
     ```
