--- a/site/about/overview-model-risk-management.qmd
+++ b/site/about/overview-model-risk-management.qmd
@@ -216,7 +216,7 @@ By integrating these features, {{< var vm.product >}} provides a comprehensive s
 
 [^2]: [Preparing validation reports](/guide/model-validation/preparing-validation-reports.qmd)
 
-[^3]: [Setting up model workflows](/guide/model-workflows/setting-up-model-workflows.qmd)
+[^3]: [Setting up workflows](/guide/workflows/setting-up-workflows.qmd)
 
 [^4]: [Working with document templates](/guide/templates/working-with-document-templates.qmd)
 
