--- a/site/guide/workflows/_configure-workflow-steps.qmd
+++ b/site/guide/workflows/_configure-workflow-steps.qmd
@@ -12,10 +12,10 @@ To add or edit workflow steps:
 
 1. After you're finished with step configuration, click **Update Step** to apply your changes.
 
-1. After you've configured a step,^[To delete a step, refer to: [Delete workflow steps](/guide/model-workflows/configure-model-workflows.qmd#delete-workflow-steps)] you can then [link your workflow together](/guide/model-workflows/configure-model-workflows.qmd#link-workflow-together).
+1. After you've configured a step,^[To delete a step, refer to: [Delete workflow steps](/guide/workflows/configure-workflows.qmd#delete-workflow-steps)] you can then [link your workflow together](/guide/workflows/configure-workflows.qmd#link-workflow-together).
 
 ::: {.callout}
-Refer to [Setting up model workflows](/guide/model-workflows/setting-up-model-workflows.qmd#workflow-elements) for information on available step types and details on how to set up conditional requirements.
+Refer to [Setting up workflows](/guide/workflows/setting-up-workflows.qmd#workflow-elements) for information on available step types and details on how to set up conditional requirements.
 
 :::
 
