--- a/site/guide/workflows/_initiate-workflows.qmd
+++ b/site/guide/workflows/_initiate-workflows.qmd
@@ -1,9 +1,13 @@
 :::: {.content-visible unless-format="revealjs"}
 ::: {.callout}
-By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has sufficient permissions to manually start model workflows.
+By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has sufficient permissions to manually start workflows.
 :::
 
-To manually start a workflow[^initiate-workflows] for a specific model:
+To manually start workflows[^initiate-workflows]:
+
+::: {.panel-tabset}
+
+#### On models
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
@@ -20,9 +24,28 @@ To manually start a workflow[^initiate-workflows] for a specific model:
 
 1. Click **{{< fa arrow-right >}} Run Workflow Now** to confirm.
 
+#### On findings
+
+1. On the details page of your finding,^[[View and filter model findings](/guide/model-validation/view-filter-model-findings.qmd#view-model-findings)] locate the [active workflows]{.smallcaps} section.
+
+1. Click **{{< fa arrow-right-arrow-left >}} See All Workflows**.
+
+1. Select **{{< fa arrow-right >}} Run Workflow** for the workflow you'd like to initiate, then select your desired **[workflow start]{.smallcaps}** option:
+
+    - **Run Now** — Workflow starts instantly.
+    - **Scheduled Run** — Set a future date to run the workflow.
+
+1. Click **{{< fa arrow-right >}} Run Workflow Now** to confirm.
+
+:::
+
 ### Resume workflows
 
-To manually resume a workflow in a {{< fa clock >}} Wait state:^[[Conditional requirements](/guide/model-workflows/setting-up-model-workflows.qmd#conditional-requirements)]
+To manually resume a workflow in a {{< fa clock >}} Wait state:^[[Conditional requirements](/guide/workflows/setting-up-workflows.qmd#conditional-requirements)]
+
+::: {.panel-tabset}
+
+#### On models
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
@@ -34,13 +57,23 @@ To manually resume a workflow in a {{< fa clock >}} Wait state:^[[Conditional re
 
 1. On the **{{< fa clock >}} Wait** step, double-click on **{{< fa arrow-right-arrow-left >}}** to advance the workflow immediately.
 
+#### On findings
+
+1. On the details page of your finding,^[[View and filter model findings](/guide/model-validation/view-filter-model-findings.qmd#view-model-findings)] locate the [active workflows]{.smallcaps} section.
+
+1. For the workflow you'd like to manually advance, click **{{< fa arrow-right-arrow-left >}} Resume Workflow** to open up the workflow's step overview.
+
+1. On the **{{< fa clock >}} Wait** step, double-click on **{{< fa arrow-right-arrow-left >}}** to advance the workflow immediately.
+
+:::
+
 
 <!-- ADDITIONAL FOOTNOTES -->
 
 [^initiate-workflows]:
 
     ::: {.callout title="Workflows can be set to run automatically on specific triggers."}
-    Refer to [Configure custom workflows](/guide/model-workflows/configure-model-workflows.qmd) for more details.
+    Refer to [Configure workflows](/guide/workflows/configure-workflows.qmd) for more details.
     :::
 
 ::::
@@ -48,6 +81,12 @@ To manually resume a workflow in a {{< fa clock >}} Wait state:^[[Conditional re
 
 
 :::: {.content-hidden unless-format="revealjs"}
+To initiate workflows manually:
+
+::: {.panel-tabset}
+
+#### On models
+
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
 1. Select a model or find your model [by applying a filter or searching for it](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models){target="_blank"}.
@@ -62,5 +101,20 @@ To manually resume a workflow in a {{< fa clock >}} Wait state:^[[Conditional re
     - **Scheduled Run** — Set a future date to run the workflow.
 
 1. Click **{{< fa arrow-right >}} Run Workflow Now** to confirm.
+
+#### On findings
+
+1. On the [details page of your finding](/guide/model-validation/view-filter-model-findings.qmd#view-model-findings){target="_blank"}, locate the [active workflows]{.smallcaps} section.
+
+1. Click **{{< fa arrow-right-arrow-left >}} See All Workflows**.
+
+1. Select **{{< fa arrow-right >}} Run Workflow** for the workflow you'd like to initiate, then select your desired **[workflow start]{.smallcaps}** option:
+
+    - **Run Now** — Workflow starts instantly.
+    - **Scheduled Run** — Set a future date to run the workflow.
+
+1. Click **{{< fa arrow-right >}} Run Workflow Now** to confirm.
+
+:::
 
 ::::
