--- a/site/guide/workflows/_transition-workflow-examples.qmd
+++ b/site/guide/workflows/_transition-workflow-examples.qmd
@@ -1,5 +1,5 @@
 :::: {.content-visible unless-format="revealjs"}
-While your model stages^[[Manage model stages](/guide/model-workflows/manage-model-stages.qmd)] and workflows states^[[Workflow states](/guide/model-workflows/setting-up-model-workflows.qmd#workflow-states)] are custom to your organization, some examples are:
+While your model stages^[[Manage model stages](/guide/workflows/manage-model-stages.qmd)] and workflows states^[[Workflow states](/guide/workflows/setting-up-workflows.qmd#workflow-states)] are custom to your organization, some examples are:
 
 - **To submit model documentation for validation** — Click **Ready for Validation** to indicate that a model developer has completed the initial model documentation and is ready to have it validated. Add any notes that need to be included and then click Ready for Validation.
 - **To submit validation reports for review and approval** — Click **Ready for Review** to indicate that you have completed your initial model validation report, fill in the mandatory notes, and submit.
@@ -9,12 +9,21 @@ While your model stages^[[Manage model stages](/guide/model-workflows/manage-mod
 ::::
 
 
-:::: {.content-hidden unless-format="revealjs"}
+:::: {.content-visible when-format="revealjs" when-meta="includes.developer"}
 While your model stages and workflows states are custom to your organization, some examples are:
 
 - **To submit model documentation for validation** — Click **Ready for Validation** to indicate that a model developer has completed the initial model documentation and is ready to have it validated. Add any notes that need to be included and then click Ready for Validation.
+- **To request revisions to model documentation** — Click **Request Revision**, fill in the mandatory notes to explain the changes that are required, and submit.
+- **To have your model documentation approved** — Click **Ready for Approval**, fill in the mandatory notes, and submit.
+::::
+
+
+:::: {.content-visible when-format="revealjs" unless-meta="includes.developer"}
+While your model stages and workflows states are custom to your organization, some examples are:
+
 - **To submit validation reports for review and approval** — Click **Ready for Review** to indicate that you have completed your initial model validation report, fill in the mandatory notes, and submit.
-- **To request revisions to model documentation or validation reports** — Click **Request Revision**, fill in the mandatory notes to explain the changes that are required, and submit.
-- **To have your model documentation and validation report approved** — Click **Ready for Approval**, fill in the mandatory notes, and submit.
+- **To request revisions to validation reports** — Click **Request Revision**, fill in the mandatory notes to explain the changes that are required, and submit.
+- **To have your validation report approved** — Click **Ready for Approval**, fill in the mandatory notes, and submit.
 
 ::::
+
