--- a/site/guide/workflows/configure-workflows.qmd
+++ b/site/guide/workflows/configure-workflows.qmd
@@ -1,12 +1,13 @@
 ---
-title: "Configure model workflows"
+title: "Configure workflows"
 date: last-modified
 aliases:
   - /guide/set-up-model-workflows.html
   - set-up-model-workflows.html
+  - /guide/model-workflows/configure-model-workflows.html
 ---
 
-{{< include /guide/model-workflows/_configure-model-workflows.qmd >}}
+{{< include /guide/workflows/_configure-workflows.qmd >}}
 
 ::: {.attn}
 
@@ -28,15 +29,15 @@ To set up a new custom workflow, you'll need to complete these three steps in se
 
 ### Add new workflows
 
-{{< include /guide/model-workflows/_add-new-workflows.qmd >}}
+{{< include /guide/workflows/_add-new-workflows.qmd >}}
 
 ### Configure workflow steps
 
-{{< include /guide/model-workflows/_configure-workflow-steps.qmd >}}
+{{< include /guide/workflows/_configure-workflow-steps.qmd >}}
 
 ### Link workflow together
 
-{{< include /guide/model-workflows/_link-workflow-together.qmd >}}
+{{< include /guide/workflows/_link-workflow-together.qmd >}}
 
 ::: {.callout title="Workflow steps relationship unclear on your canvas?"}
 Click **Tidy Layout** at any time for a linear view of your workflow.
@@ -44,19 +45,19 @@ Click **Tidy Layout** at any time for a linear view of your workflow.
 
 ## Edit existing workflows
 
-You can edit a workflow in two ways:
+You can edit a workflow in several ways:
 
 ::: {.panel-tabset}
 
-#### Via the **{{< fa gear >}} Settings** page
+#### Via **{{< fa gear >}} Settings**
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
 2. Under Workspace, select **Workflows**.
 
-3. Click on the workflow you'd like to modify to edit the configuration for that workflow.
+3. Select the type of workflow, then click on the workflow you'd like to modify to edit the configuration for that workflow.
 
-#### Via a workflow applied to a model
+#### Via workflows applied to models
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
@@ -68,9 +69,17 @@ You can edit a workflow in two ways:
 
 5. On the workflow's detail modal, click on the **{{< fa ellipsis-vertical >}}** in the top-right hand corner and select **{{< fa pencil >}} Edit Workflow**.
 
+#### Via workflows applied to findings
+
+1. On the details page of your finding,[^4] locate the [active workflows]{.smallcaps} section.
+
+2. Click on the name of the workflow you'd like to abort to open that specific workflow's details.
+
+3. On the workflow's detail modal, click on the **{{< fa ellipsis-vertical >}}** in the top-right hand corner and select **{{< fa pencil >}} Edit Workflow**.
+
 :::
 
-a. Make your desired changes to step configuration[^4] and step relationships[^5] on your workflow.
+a. Make your desired changes to step configuration[^5] and step relationships[^6] on your workflow.
 
 b. When you are finished, click **Save Workflow** to apply your changes.
 
@@ -115,11 +124,10 @@ Deleting workflow steps on workflows active on models may result in malfunctioni
 
 5. After you confirm, the workflow will be removed and inaccessible by models for any future runs.
 
-
 ## What's next
 
 - [Workflows FAQ](/faq/faq-workflows.qmd)
-- [Work with workflows](working-with-model-workflows.qmd)
+- [Work with workflows](working-with-workflows.qmd)
 
 
 <!-- FOOTNOTES -->
@@ -130,6 +138,8 @@ Deleting workflow steps on workflows active on models may result in malfunctioni
 
 [^3]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^4]: [Configure workflow steps](#configure-workflow-steps)
+[^4]: [View and filter model findings](/guide/model-validation/view-filter-model-findings.qmd#view-model-findings)
 
-[^5]: [Link workflow together](#link-workflow-together)
+[^5]: [Configure workflow steps](#configure-workflow-steps)
+
+[^6]: [Link workflow together](#link-workflow-together)
