--- a/site/guide/workflows/manage-workflow-tasks.qmd
+++ b/site/guide/workflows/manage-workflow-tasks.qmd
@@ -3,7 +3,7 @@ title: "Manage workflow tasks"
 date: last-modified
 ---
 
-View and interact with outstanding workflow transition tasks assigned to your user roles for all workflows on your models.
+View and interact with outstanding workflow transition tasks assigned to your user roles for all workflows.
 
 :::{.callout}
 Tasks will only appear in your inbox if the workflow step[^1] is set up to display the action button to your user role[^2] or model stakeholder type.[^3]
@@ -16,7 +16,7 @@ Tasks will only appear in your inbox if the workflow step[^1] is set up to displ
 - [x] {{< var link.login >}}
 - [x] There are models registered in the model inventory.[^4]
 - [x] Model stages have already been customized for use in workflows.[^5]
-- [x] Workflows have already been set up for use with your models.[^6]
+- [x] Workflows have already been set up for use with your models or findings.[^6]
 - [x] You are a assigned role with sufficient permissions to transition workflows into their next states.[^7]
 
 :::
@@ -27,7 +27,7 @@ Tasks will only appear in your inbox if the workflow step[^1] is set up to displ
 
 2. Select the **Tasks** tab.
 
-3. From the in-{{< var vm.platform >}} task list, view your incomplete tasks, access models attached to tasks, and transition model workflows into their next states:
+3. From the in-{{< var vm.platform >}} task list, view your incomplete tasks, access models or findings attached to tasks, and transition workflows into their next states:
 
 ::: {.panel-tabset}
 
@@ -35,19 +35,19 @@ Tasks will only appear in your inbox if the workflow step[^1] is set up to displ
 
 Tasks are listed with the following information:
 
-- The name of the model the workflow is attached to
+- The name of the model or finding the workflow is attached to
 - The current workflow state of the workflow[^8]
-- The name of the workflow attached to the model[^9]
+- The name of the workflow attached to the model or finding[^9]
 - The due date of the workflow, calculated from the workflow's expected duration
 - Action items associated with that task
 
 To show older tasks, scroll down to the bottom and click **Load More**.
 
-### Access model details
+### Access details
 
-To view the details of a model attached to a workflow task, click the button displaying the name of the model.
+To view the details of a model or finding attached to a workflow task, click the button displaying the name of the model or finding.
 
-### Transition model workflows
+### Transition workflows
 
 If an action is available to your role,[^10] you'll see it appear as an action button under a workflow task:
 
@@ -61,7 +61,7 @@ Once completed, tasks will be removed from your view.
 
 <!-- FOOTNOTES -->
 
-[^1]: [Workflow step types](setting-up-model-workflows.qmd#workflow-step-types)
+[^1]: [Workflow step types](setting-up-workflows.qmd#workflow-step-types)
 
 [^2]: [Manage roles](/guide/configuration/manage-roles.qmd)
 
@@ -71,14 +71,14 @@ Once completed, tasks will be removed from your view.
 
 [^5]: [Manage model stages](manage-model-stages.qmd)
 
-[^6]: [Configure model workflows](configure-model-workflows.qmd)
+[^6]: [Configure workflows](configure-workflows.qmd)
 
 [^7]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^8]: [Workflow states](setting-up-model-workflows.qmd#workflow-states)
+[^8]: [Workflow states](setting-up-workflows.qmd#workflow-states)
 
-[^9]: [Configure model workflows](configure-model-workflows.qmd)
+[^9]: [Configure workflows](configure-workflows.qmd)
 
-[^10]: [Transition model workflows](transition-model-workflows.qmd)
+[^10]: [Transition workflows](transition-workflows.qmd)
 
 [^11]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
