--- a/site/guide/workflows/transition-workflows.qmd
+++ b/site/guide/workflows/transition-workflows.qmd
@@ -1,6 +1,8 @@
 ---
-title: "Transition model workflows"
+title: "Transition workflows"
 date: last-modified
+aliases: 
+  - /guide/model-workflows/transition-model-workflows.html
 ---
 
 Transition a model's workflow into its next state, or reset a workflow on a model.
@@ -17,13 +19,13 @@ Transition a model's workflow into its next state, or reset a workflow on a mode
 
 :::
 
-## Transition model workflows
+## Transition workflows
 
-{{< include _transition-model-workflows.qmd >}}
+{{< include _transition-workflows.qmd >}}
 
-## Reset model workflows
+## Reset workflows
 
-{{< include _reset-model-workflows.qmd >}}
+{{< include _reset-workflows.qmd >}}
 
 
 <!-- FOOTNOTES -->
@@ -32,6 +34,6 @@ Transition a model's workflow into its next state, or reset a workflow on a mode
 
 [^2]: [Manage model stages](manage-model-stages.qmd)
 
-[^3]: [Configure model workflows](configure-model-workflows.qmd)
+[^3]: [Configure workflows](configure-workflows.qmd)
 
 [^4]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
