--- a/site/guide/workflows/workflow-configuration-examples.qmd
+++ b/site/guide/workflows/workflow-configuration-examples.qmd
@@ -9,7 +9,7 @@ Learn from example workflow configurations to help you tailor workflows to fit y
 
 Workflows can be as simple or as complex as required, with multiple and discrete workflows supported for unique triggers and scenarios.
 
-For example, to cover activities in their model lifecycle up to model deployment, an organization has the following workflows configured:
+For example, to cover activities in their model lifecycle up to model deployment, an organization has the following model workflows configured:
 
 ::: {.panel-tabset}
 
@@ -245,7 +245,7 @@ In this example, the workflow is designated to stop after running an additional 
 
 [^2]: [Manage model stages](manage-model-stages.qmd)
 
-[^3]: [Workflow states](setting-up-model-workflows.qmd#workflow-states)
+[^3]: [Workflow states](setting-up-workflows.qmd#workflow-states)
 
 [^4]: ![Adding a workflow that initiates on model validation](example_model-validation.png){fig-alt="A screenshot showing the modal for adding a workflow that initiates on model validation" .screenshot group="model-validation"}
 
@@ -260,9 +260,9 @@ In this example, the workflow is designated to stop after running an additional 
 
 [^5]: [Manage model stages](manage-model-stages.qmd)
 
-[^6]: [Workflow states](setting-up-model-workflows.qmd#workflow-states)
+[^6]: [Workflow states](setting-up-workflows.qmd#workflow-states)
 
-[^7]: [Conditional requirements](setting-up-model-workflows.qmd#conditional-requirements)
+[^7]: [Conditional requirements](setting-up-workflows.qmd#conditional-requirements)
 
 [^8]: ![Adding a workflow that is initiated when a model has a scheduled deployment date](example_model-deployment.png){fig-alt="A screenshot showing the modal for adding a workflow that is initiated when a model has a scheduled deployment date" .screenshot group="model-deployment"}
 
@@ -277,11 +277,11 @@ In this example, the workflow is designated to stop after running an additional 
 
 [^9]: [Manage model stages](manage-model-stages.qmd)
 
-[^10]: [Workflow states](setting-up-model-workflows.qmd#workflow-states)
+[^10]: [Workflow states](setting-up-workflows.qmd#workflow-states)
 
 [^11]: [Manage model stages](manage-model-stages.qmd)
 
-[^12]: [Workflow states](setting-up-model-workflows.qmd#workflow-states)
+[^12]: [Workflow states](setting-up-workflows.qmd#workflow-states)
 
 [^13]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)
 
