--- a/site/guide/workflows/working-with-workflows.qmd
+++ b/site/guide/workflows/working-with-workflows.qmd
@@ -1,8 +1,6 @@
 ---
-title: "Working with model workflows"
+title: "Working with workflows"
 date: last-modified
-aliases:
-  - /guide/working-with-model-workflows.html
 listing:
   - id: workflows
     type: grid
@@ -11,9 +9,12 @@ listing:
     sort: false
     fields: [title, description]
     contents:
-    - manage-model-workflows.qmd
-    - transition-model-workflows.qmd
+    - manage-workflows.qmd
+    - transition-workflows.qmd
     - manage-workflow-tasks.qmd
+aliases:
+  - /guide/working-with-model-workflows.html
+  - /guide/model-workflows/working-with-model-workflows.html
 ---
 
 Once customized, use workflows to transition your models into their appropriate next stages throughout your model lifecycles.
