--- a/site/releases/2024/2024-jul-22/release-notes.qmd
+++ b/site/releases/2024/2024-jul-22/release-notes.qmd
@@ -142,7 +142,7 @@ You can now manage lifecycle processes within your {{< var validmind.platform >}
 
 ::: {.w-30-ns}
 
-[Setting up model workflows](/guide/model-workflows/setting-up-model-workflows.qmd){.button .button-green}
+[Setting up workflows](/guide/workflows/setting-up-workflows.qmd){.button .button-green}
 
 :::
 
