--- a/site/training/administrator-fundamentals/using-validmind-for-model-risk-management.qmd
+++ b/site/training/administrator-fundamentals/using-validmind-for-model-risk-management.qmd
@@ -124,14 +124,14 @@ Let's continue our journey by learning how to **set up workflows** for your use 
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Model workflow elements
+Workflow elements
 
 ::: {.f5 .nt2 .pl2 .mb4}
 (Scroll down for the full instructions.)
 :::
 
 ::: {.tc}
-[Learn more ...](/guide/model-workflows/setting-up-model-workflows.qmd){.button target="_blank"}
+[Learn more ...](/guide/workflows/setting-up-workflows.qmd){.button target="_blank"}
 :::
 
 <br>Learn how to **manage model stages** on the next page. {{< fa hand-point-right >}}
@@ -140,22 +140,22 @@ Model workflow elements
 
 ::: {.column width="70%" .bl .pl4 .f4}
 
-{{< include /guide/model-workflows/_set-up-model-workflows.qmd >}}
+{{< include /guide/workflows/_set-up-workflows.qmd >}}
 
 A workflow is comprised of an interplay of these elements:
 
 ::: {.panel-tabset}
 ### Workflow step types
 
-{{< include /guide/model-workflows/_workflow-step-types.qmd >}}
+{{< include /guide/workflows/_workflow-step-types.qmd >}}
 
 ### Conditional requirements
 
-{{< include /guide/model-workflows/_conditional-requirements.qmd >}}
+{{< include /guide/workflows/_conditional-requirements.qmd >}}
 
 ### Workflow states
 
-{{< include /guide/model-workflows/_workflow-states.qmd >}}
+{{< include /guide/workflows/_workflow-states.qmd >}}
 
 :::
 
@@ -173,7 +173,7 @@ Manage model stages
 :::
 
 ::: {.tc}
-[Learn more ...](/guide/model-workflows/manage-model-stages.qmd){.button target="_blank"}
+[Learn more ...](/guide/workflows/manage-model-stages.qmd){.button target="_blank"}
 :::
 
 <br>Try it **live** on the next page. {{< fa hand-point-right >}}
@@ -182,11 +182,11 @@ Manage model stages
 
 ::: {.column width="70%" .bl .pl4 .f3}
 
-{{< include /guide/model-workflows/_configure-model-stages.qmd >}}
+{{< include /guide/workflows/_configure-model-stages.qmd >}}
 
 #### Add model stages
 
-{{< include /guide/model-workflows/_add-model-stages.qmd >}}
+{{< include /guide/workflows/_add-model-stages.qmd >}}
 
 
 :::
@@ -215,20 +215,20 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Configure model workflows
+Configure custom workflows
 
 ::: {.f5 .nt2 .pl2 .mb4}
 (Scroll down for the full instructions.)
 :::
 
 ::: {.tc}
-[Learn more ...](/guide/model-workflows/configure-model-workflows.qmd){.button target="_blank"}
+[Learn more ...](/guide/workflows/configure-workflows.qmd){.button target="_blank"}
 :::
 
 <br>Try it **live** on the next pages. {{< fa hand-point-right >}}
 
 ::: {.f5 .pl3 .mt4 .pr3 .embed}
-For more assistance configuring workflows, refer to our [Workflow configuration examples](/guide/model-workflows/workflow-configuration-examples.qmd){target="_blank"}.
+For more assistance configuring workflows, refer to our [Workflow configuration examples](/guide/workflows/workflow-configuration-examples.qmd){target="_blank"}.
 
 :::
 
@@ -236,7 +236,7 @@ For more assistance configuring workflows, refer to our [Workflow configuration 
 
 ::: {.column width="70%" .bl .pl4 .f4}
 
-{{< include /guide/model-workflows/_configure-model-workflows.qmd >}}
+{{< include /guide/workflows/_configure-workflows.qmd >}}
 
 To set up a new custom workflow, you'll need to complete these three steps in sequence:
 
@@ -244,15 +244,15 @@ To set up a new custom workflow, you'll need to complete these three steps in se
 
 ### 1. Add workflow
 
-{{< include /guide/model-workflows/_add-new-workflows.qmd >}}
+{{< include /guide/workflows/_add-new-workflows.qmd >}}
 
 ### 2. Configure workflow steps
 
-{{< include /guide/model-workflows/_configure-workflow-steps.qmd >}}
+{{< include /guide/workflows/_configure-workflow-steps.qmd >}}
 
 ### 3. Link workflow together
 
-{{< include /guide/model-workflows/_link-workflow-together.qmd >}}
+{{< include /guide/workflows/_link-workflow-together.qmd >}}
 
 :::
 
@@ -266,8 +266,8 @@ To set up a new custom workflow, you'll need to complete these three steps in se
 **Add a model workflow**
 :::
 
-1. Click **{{< fa plus >}} Add Workflow**.
-2. On the Add New Workflow modal, enter in a **[title]{.smallcaps}** and a **[description]{.smallcaps}** the workflow.
+1. Click **{{< fa plus >}} Add Model Workflow**.
+2. On the Add New Model Workflow modal, enter in a **[title]{.smallcaps}** and a **[description]{.smallcaps}** the workflow.
 3. Under **[workflow start]{.smallcaps}**, select **Manually**.
 4. Under **[workflow expected duration]{.smallcaps}**, define the SLA for the workflow.
 5. Click **Add Workflow** to save your blank workflow.
@@ -302,14 +302,10 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Run model workflows
-
-::: {.f5 .nt2 .pl2 .mb4}
-(Scroll down for the full instructions.)
-:::
+Run workflows manually
 
 ::: {.tc}
-[Learn more ...](/guide/model-workflows/manage-model-workflows.qmd){.button target="_blank"}
+[Learn more ...](/guide/workflows/manage-workflows.qmd){.button target="_blank"}
 :::
 
 <br>Try it **live** on the next page. {{< fa hand-point-right >}}
@@ -318,9 +314,7 @@ Run model workflows
 
 ::: {.column width="70%" .bl .pl4 .f3}
 
-Now, let's initiate our sample workflow manually:
-
-{{< include /guide/model-workflows/_initiate-model-workflows.qmd >}}
+{{< include /guide/workflows/_initiate-workflows.qmd >}}
 
 :::
 ::::
@@ -342,37 +336,37 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
-## {.scrollable .center}
+## {.scrollable}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Reset & abort model workflows
+Reset & abort workflows
 
 ::: {.f5 .nt2 .pl2 .mb4}
 (Scroll down for the full instructions.)
 :::
 
 ::: {.tc}
-[Learn more ...](/guide/model-workflows/transition-model-workflows.qmd){.button target="_blank"}
+[Learn more ...](/guide/workflows/transition-workflows.qmd){.button target="_blank"}
 :::
 
 <br>Try it **live** on the next page. {{< fa hand-point-right >}}
 
 :::
 
-::: {.column width="70%" .bl .pl4 .f3}
+::: {.column width="70%" .bl .pl4 .f4}
 
-As an administrator, you may need to reset or abort model workflows as required:
+As an administrator, you may need to reset or abort workflows as required:
 
 ::: {.panel-tabset}
 
 #### Reset workflows
 
-{{< include /guide/model-workflows/_reset-model-workflows.qmd >}}
+{{< include /guide/workflows/_reset-workflows.qmd >}}
 
 #### Abort workflows
 
-{{< include /guide/model-workflows/_abort-workflows.qmd >}}
+{{< include /guide/workflows/_abort-workflows.qmd >}}
 
 :::
 
