Edit: Manage model stakeholder types on registration

--- a/site/guide/configuration/manage-model-stakeholder-types.qmd
+++ b/site/guide/configuration/manage-model-stakeholder-types.qmd
@@ -22,6 +22,20 @@ Please note that the stock **Model Developer**, **Model Owner**, and **Model Val
 
 {{< include /guide/configuration/_add-model-stakeholder-types.qmd >}}
 
+#### Configure stakeholder types on registration
+
+By default, only the selection of **[model owner]{.smallcaps}**s is required when models are registered in your inventory.
+
+To include selection of additional stakeholder types during registration:
+
+1. Click on the stakeholder type you want to include during registration.
+
+2. Toggle **[available on model registration]{.smallcaps}** to display user selection for that stakeholder type.
+
+    (Optional) To make user selection for that stakeholder type mandatory, also toggle **[make it required]{.smallcaps}**.
+
+Changes are saved automatically.
+
 #### Manage stakeholder type permissions
 
 {{< include /guide/configuration/_manage-stakeholder-type-permissions.qmd >}}
