Edit: Manage model stakeholder types on registration training pt1

--- a/site/guide/configuration/_add-model-stakeholder-types.qmd
+++ b/site/guide/configuration/_add-model-stakeholder-types.qmd
@@ -10,7 +10,7 @@
 
 1. Once you click **{{< fa plus >}} Add Stakeholder Type**, you can:
 
-    - Configure stakeholder types available upon mode registration^[[Configure stakeholder types on registration](/guide/configuration/manage-model-stakeholder-types.qmd#configure-stakeholder-types-on-registration)]
+    - Configure stakeholder type selection available upon model registration^[[Configure stakeholder types on registration](/guide/configuration/manage-model-stakeholder-types.qmd#configure-stakeholder-types-on-registration)]
     - Manage the model inventory field^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)] permissions associated with that type
 
 ::::
@@ -26,7 +26,7 @@ a. Enter the unique **[name]{.smallcaps}** and **[description]{.smallcaps}** for
 
 1. Once you click **{{< fa plus >}} Add Stakeholder Type**, you can:
 
-    - Configure stakeholder types available upon mode registration
+    - Configure stakeholder type selection available upon model registration
     - Manage the model inventory field permissions associated with that type
 
 ::::
