--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -217,11 +217,15 @@ Please note that the stock **Model Developer**, **Model Owner**, and **Model Val
 
 ::: {.panel-tabset}
 
-### 1. Add model stakeholder types
+### 1. Add types
 
 {{< include /guide/configuration/_add-model-stakeholder-types.qmd >}}
 
-### 2. Manage stakeholder type permissions
+### 2. Manage availability
+
+{{< include /guide/configuration/_stakeholder-type-on-registration.qmd >}}
+
+### 3. Manage permissions
 
 {{< include /guide/configuration/_manage-stakeholder-type-permissions.qmd >}}
 
