Edit: Manage model stakeholder types on registration training pt2

--- a/site/guide/configuration/_stakeholder-type-on-registration.qmd
+++ b/site/guide/configuration/_stakeholder-type-on-registration.qmd
@@ -18,7 +18,7 @@ Changes are saved automatically.
 ::::
 
 :::: {.content-hidden unless-format="revealjs"}
-To include selection of additional stakeholder types [during model registration](/guide/model-inventory/register-models-in-inventory.qmd):
+To include selection of additional stakeholder types [during model registration](/guide/model-inventory/register-models-in-inventory.qmd){target="_blank"}:
 
 1. Click on the stakeholder type you want to select users for during registration.
 
