--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -255,13 +255,14 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 :::: {.slideover--b .auto-collapse-10}
 ::: {.tc}
-**Modify stakeholder field permissions**
+**Modify stakeholder field availability & permissions**
 :::
 
 1. Click on the stakeholder type you added previously.
-2. On the **Permissions** tab, select **Edit Permissions** to modify inventory field permissions to or from that type.
-3. Toggle specific permissions for that stakeholder type by checking or unchecking the boxes next to the permission.
-4. Click **Save Permissions** to apply your changes.
+2. Toggle whether or not you want to select users for this stakeholder type during model registration.
+3. On the **Permissions** tab, select **Edit Permissions** to modify inventory field permissions to or from that type.
+4. Toggle specific permissions for that stakeholder type by checking or unchecking the boxes next to the permission.
+5. Click **Save Permissions** to apply your changes.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
