--- a/site/get-started/common-steps/_register-your-first-model.qmd
+++ b/site/get-started/common-steps/_register-your-first-model.qmd
@@ -46,7 +46,7 @@ a. To register a model for use with this quickstart, select:
 
 a. Click **Next {{< fa angle-right >}}** to continue to assignment of model stakeholders.
 
-a. Select your own name under the **[model owner]{.smallcaps}** drop-down — don't worry, we'll adjust these permissions later for validation.
+a. Select your own name under the **[model owner]{.smallcaps}** drop-down — don't worry, we'll adjust these permissions next for validation.
 
 a. Click **Register Model** to add the model to your inventory.
 
