--- a/site/guide/configuration/_stakeholder-type-on-registration.qmd
+++ b/site/guide/configuration/_stakeholder-type-on-registration.qmd
@@ -20,9 +20,9 @@ Changes are saved automatically.
 :::: {.content-hidden unless-format="revealjs"}
 To include selection of additional stakeholder types [during model registration](/guide/model-inventory/register-models-in-inventory.qmd){target="_blank"}:
 
-1. Click on the stakeholder type you want to select users for during registration.
+a. Click on the stakeholder type you want to select users for during registration.
 
-2. Toggle **[available on model registration]{.smallcaps}** to display user selection for that stakeholder type.
+a. Toggle **[available on model registration]{.smallcaps}** to display user selection for that stakeholder type.
 
     (Optional) To make user selection for that stakeholder type mandatory, also toggle **[make it required]{.smallcaps}**.
 
